# crabshell

./: AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml
.codecrafters/: compile.sh  run.sh
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  auto_assign.yml  depandabot.yml
.github/ISSUE_TEMPLATES/: bug_report.md
.github/workflows/: bitbucket_sync.yml  build.yml  codeql.yml  gitlab_sync.yml  lint.yml  release.yml  slack.yml  tests.yml  upload_coverage_report.yml
.gitlab/issue_templates/: bug_report.md  feature_request.md
.gitlab/merge_request_templates/: base.md
.kiro/hooks/: test-coverage-check.kiro.hook
.kiro/specs/quotable-executables/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
src/: command.rs  main.rs
src/commands/: cd.rs  constants.rs  echo.rs  exit.rs  external.rs  mod.rs  pwd.rs  typee.rs
src/utils/: logger.rs  mod.rs  path_utils.rs  string_utils.rs
tests/: commands_tests.rs  utils_tests.rs
tests/commands/: commands.rs
tests/utils/: string_utils.rs
