[package]
name = "crabshell"
version = "0.1.0"
authors = ["Lusina <12752833+BrianLusina@users.noreply.github.com>>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.11.1"                                  # helps manage buffers
thiserror = "1.0.38"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"                             # error handling
color-eyre = "0.6.3"